--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,11 @@ html {
 }
 
 .blurple {
-  color: #7289da;
+  color: #5f0bde;
 }
 
 .bg-base {
-  background-color: #1a2634 !important;
+  background-color: #0f0321 !important;
 }
 
 #backtotop {
