--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,7 @@ nav.nav-w {
 }
 
 .button.is-blurple {
-  background-color: #7289da;
+  background-color: #5f0bde;
   border-color: transparent;
   color: #fff;
 }
