--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ html {
 
 #backtotop {
   display: inline-block;
-  background-color: #7289da;
+  background-color: #5f0bde;
   width: 50px;
   height: 50px;
   text-align: center;
@@ -56,12 +56,12 @@ html {
 
 .navbar-item:hover {
   background-color: transparent !important;
-  color: #7289da !important;
+  color: #5f0bde !important;
 }
 
 .navbar-link:hover {
   background-color: transparent !important;
-  color: #7289da !important;
+  color: #5f0bde !important;
 }
 
 .navbar-menu {
@@ -99,7 +99,7 @@ nav,
 
 .navbar-item.nav-dark,
 .navbar-link.nav-dark {
-  color: #363636 !important;
+  color: #0f0321 !important;
 }
 
 .navbar-item,
